<resources>
    <string name="app_name">SkinnerApp</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Skinner User</string>
    <string name="nav_header_subtitle">skinner@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="menu_registrar">Mis datos</string>
    <string name="menu_mensajeria">Mensajes</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Strings de alta y modificacion de usuarios-->
    <string name="nombre">Ingrese su nombre</string>
    <string name="apellido">Ingrese su apellido</string>
    <string name="telefono">Ingrese su teléfono</string>
    <string name="direccion">Ingrese su dirección</string>
    <string name="registrar">Registrar usuario</string>

    <string name="descripcion">Ingrese una descripción</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="addlesion">Añadir lesión</string>
    <string name="ver_tratamientos">Ver tratamientos</string>
    <string name="add_historico">Añadir imagen</string>
    <string name="list_tratamientos">Tratamientos asignados</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--    Permissions
    <string name="permission_rationale_location">Se requiere acceso al servicio de ubicación para demostrar la función \ 'mi ubicación \', que muestra su ubicación actual en el mapa.</string>
    <string name="location_permission_denied">SkinnerApp requiere permiso de ubicación para habilitar la capa \'mi ubicación\'. Vuelva a intentarlo y conceda acceso para utilizar la ubicación.\n Si el permiso se ha denegado de forma permanente, puede habilitarlo desde Configuración del sistema &gt; Aplicaciones &gt; \'SkinnerApp\'.</string>
    <string name="permission_required_toast">Se requiere permiso de ubicación para utilizar esta funcionalidad.</string>-->
    <string name="title_activity_find_doctor">Map</string>

    <string name="gps_network_not_enabled">GPS se encuentra desactivado.</string>
    <string name="open_location_settings">El sistema GPS se encuentra desactivado, ¿Desea activarlo?</string>
    <string name="Cancel">Cancelar</string>
    <string name="useractualposition">Posición actual</string>
    <string name="title_activity_loginactivity">loginactivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_new_password">Nueva contraseña</string>
    <string name="prompt_change_password">Cambiar contraseña</string>
    <string name="prompt_new_password2">Confirmar nueva contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="actualizar_password_ok">Su contraseña se ha actualizado correctamente.</string>
    <string name="actualizar_password_distinto">Las contraseñas deben coincidir, intente nuevamente.</string>

    <string name="input_palmas">Ingrese cantidad de palmas</string>

    <string name="update_lesion">Guardar</string>

    <string name="btn_map">Médicos cercanos</string>
    <string name="saved_user_id">userid</string>
    <string name="saved_user_name">username</string>
    <string name="saved_user_email">useremail</string>
    <string name="saved_password">changepassword</string>


    <!--    MENSAJES A MOSTRAR LUEGO DE ANALISIS DE IMAGENES -->
    <string name="mensaje_lunar">Le recomendamos hacer el control de sus lunares con el médico</string>
    <string name="mensaje_melanoma">Por favor, consulte a la brevedad con un médico</string>
    <string name="mensaje_vitiligo">Por favor, consulte a la brevedad con un médico</string>
    <string name="mensaje_psoriasis_leve">Por favor, consulte a la brevedad con un médico.</string>
    <string name="mensaje_psoriasis_grave">Por favor, consulte a un médico dentro de las próximas dos semanas.</string>
    <string name="mensaje_sin_enfermedad">No detectamos ninguna anomalía en su lesión, en caso de creer necesario haga la consulta con un profesional.</string>
    <string name="mensaje_nuevo_historico">Se ha añadido correctamente su nuevo historico, presione botón atrás para volver al menú principal.</string>
    <string name="title_activity_recomendacion">RecomendacionActivity</string>

    <!--    REGISTRAR USUARIO -->
    <string name="registroUsuario_ok">Su usuario ha sido registrado, proceda a iniciar sesión.</string>
    <string name="registroUsuario_error">No se pudo registrar su usuario, intente nuevamente.</string>
    <string name="registroUsuario_campoincompleto">No se pudo registrar su usuario, completar todos los campos.</string>

    <string name="recomendacion_foto_titulo">Para tomar una foto óptima le recomendamos:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>