<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_info" />
        <item
        android:id="@+id/nav_slideshow"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_registrar" />

        <item
            android:id="@+id/nav_solicitarTurno"
            android:icon="@drawable/icon_medico"
            android:title="@string/menu_solicitar_turno"
            android:visible="false" />

    </group>
</menu>